# nspllm

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.specify/memory/: constitution.md
environment/frontend_server/: db.sqlite3  manage.py
environment/frontend_server/api/: __init__.py  cors_fallback_middleware.py  middleware.py  urls.py  views.py
environment/frontend_server/frontend_server/: urls.py
environment/frontend_server/frontend_server/settings/: base.py  local.py
environment/frontend_server/translator/: views.py
repositories/: environment_repository.py  file_env_repo.py  llm_repository.py  mock_llm_repo.py
repositories/implementations/: __init__.py  file_env_repo.py  mock_llm_repo.py  openai_repo.py
reverie/: compress_sim_storage.py
reverie/backend_server/: global_methods.py  maze.py  path_finder.py  reverie.py  test.py
reverie/backend_server/persona/: persona.py
reverie/backend_server/persona/cognitive_modules/: converse.py  execute.py  perceive.py  plan.py  reflect.py  retrieve.py
reverie/backend_server/persona/memory_structures/: associative_memory.py  scratch.py  spatial_memory.py
reverie/backend_server/persona/prompt_template/: defunct_run_gpt_prompt.py  gpt_structure.py  print_prompt.py  run_gpt_prompt.py
services/: config.py  dialogue_service.py  environment_service.py  environment_service_fs.py  logging_utils.py  perception_service.py  planning_service.py  reflection_service.py
services/implementations/: __init__.py  dialogue_service_shim.py  environment_service_fs.py  perception_service_shim.py  planning_service_shim.py  reflection_service_shim.py
specs/002-adapt-generative-agent/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-adapt-generative-agent/contracts/: llm_provider_contract.md  planning_module.md
tests/: conftest.py  test_dialogue_service_shim.py  test_openai_repo.py  test_perception_service_shim.py  test_planning_service_shim.py  test_reflection_service_shim.py  test_repos_and_services_imports.py
tests/contract/: test_llm_provider_contract.py  test_planning_module_contract.py
tests/integration/: test_reproducible_logging.py  test_switch_llm_provider.py  test_switch_planning_module.py
vue-spa-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
vue-spa-app/src/: App.vue  vite-env.d.ts
vue-spa-app/src/assets/: replayAssets.ts  style.css
vue-spa-app/src/components/: HealthBadge.vue  HelloWorld.vue  PhaserReplay.vue  ReplayMap.vue
vue-spa-app/src/router/: index.ts
vue-spa-app/src/services/: api.ts
vue-spa-app/src/stores/: index.ts
vue-spa-app/src/types/: index.ts  phaser-shim.d.ts
vue-spa-app/src/views/: About.vue  DemoRunner.vue  Home.vue  ReplayViewer.vue  Simulations.vue
