[project]
name = "nspllm"
version = "0.1.0"
description = "Neuro-Symbolic Planning for Enhancing Coherence and Believability in Large Language Model-Driven Agents"
readme = "README.md"
requires-python = "==3.9.23"
authors = [
    {name = "Jeremi Wojciech Ledwon", email = "s232952@student.dtu.dk"},
    {name = "Alexandre Comas Gispert", email = "s233148@student.dtu.dk"},
]
keywords = ["llm", "agents", "planning", "neuro-symbolic", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "aiohttp==3.8.3",
    "aiosignal>=1.4.0",
    "asgiref==3.5.2",
    "async-generator>=1.10",
    "async-timeout>=4.0.3",
    "attrs>=25.3.0",
    "boto==2.49.0",
    "botocore>=1.40.29",
    "certifi>=2025.8.3",
    "charset-normalizer>=2.0.12",
    "click==8.0.3",
    "cycler>=0.12.1",
    "dj-database-url>=0.5.0",
    "django>=2.2,<3.0",
    "django-cors-headers==2.5.3",
    "django-storages-redux>=1.3.3",
    "exceptiongroup>=1.3.0",
    "frozenlist>=1.7.0",
    "gensim>=4.3.3",
    "gunicorn==20.1.0",
    "h11>=0.16.0",
    "idna>=3.10",
    "importlib-metadata>=8.7.0",
    "jmespath>=1.0.1",
    "joblib>=1.5.2",
    "kiwisolver>=1.4.7",
    "matplotlib>=3.9.4",
    "multidict>=6.6.4",
    "nltk==3.6.5",
    "numpy==1.25.2",
    "openai==0.27.0",
    "outcome>=1.3.0.post0",
    "packaging>=25.0",
    "pandas==2.0.3",
    "patsy>=1.0.1",
    "pillow>=8.4.0",
    "psycopg2-binary==2.9.5",
    "pycparser>=2.23",
    "pyparsing>=3.2.3",
    "pysocks>=1.7.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "regex>=2025.9.1",
    "requests==2.26.0",
    "s3transfer>=0.14.0",
    "scikit-learn>=1.6.1",
    "scikit-posthocs>=0.11.4",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "selenium==4.8.2",
    "six>=1.17.0",
    "smart-open>=7.3.1",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "sqlparse>=0.5.3",
    "statsmodels>=0.14.5",
    "threadpoolctl>=3.6.0",
    "tqdm==4.62.3",
    "trio>=0.31.0",
    "trio-websocket>=0.12.2",
    "trueskill>=0.4.5",
    "typing-extensions>=4.15.0",
    "urllib3>=1.26.20",
    "wsproto>=1.2.0",
    "yarl>=1.20.1",
    "yellowbrick>=1.5",
    "zipp>=3.23.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "S101", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
