[project]
name = "nspllm"
version = "0.1.0"
description = "Neuro-Symbolic Planning for Enhancing Coherence and Believability in Large Language Model-Driven Agents"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Jeremi Wojciech Ledwon", email = "s232952@student.dtu.dk"},
    {name = "Alexandre Comas Gispert", email = "s233148@student.dtu.dk"},
]
keywords = ["llm", "agents", "planning", "neuro-symbolic", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core web and server stack (updated for Python 3.12)
    "django>=4.2,<5.0",
    "asgiref>=3.8.1",
    "dj-database-url>=2.2.0",
    "django-cors-headers>=4.4.0",
    "django-storages>=1.14.4",
    "gunicorn>=22.0.0",
    "psycopg2-binary>=2.9.9",
    
    # HTTP and async
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    "aiohttp>=3.9.5",
    
    # Data science stack (3.12 compatible)
    "numpy>=1.26,<2.0",
    "pandas>=2.2.2",
    "scipy>=1.13.1",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.2",
    "joblib>=1.4.2",
    "threadpoolctl>=3.5.0",
    "yellowbrick>=1.5",
    
    # NLP + utilities
    "nltk>=3.9.1",
    "gensim>=4.3.3",
    "regex>=2024.9.11",
    "tqdm>=4.66.5",
    "smart-open>=7.0.4",
    
    # Browser automation (optional)
    "selenium>=4.24.0",
    
    # OpenAI client (v1 API)
    "openai>=1.45.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "S101", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
